--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -3,6 +3,8 @@ ControlMachine={{ master.hostname }}
 AuthType=auth/munge
 CryptoType=crypto/munge
 SlurmUser=slurm
+AuthAltTypes=auth/jwt
+AuthAltParameters=jwt_key=/etc/slurm/jwt-secret.key
 
 # NODE CONFIGURATIONS
 {% set mem = master.memory // 1024 * 1000 %}
@@ -18,8 +20,10 @@ NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket
 PartitionName=debug Nodes={% if use_master_as_compute == 'yes' %}{{master.hostname}},{%endif%}{{sl|join(",")}} default=YES
 
 # ACCOUNTING
-#AccountingStorageType=accounting_storage/slurmdbd
-#AccountingStorageHost=lxcc01
+AccountingStorageType=accounting_storage/slurmdbd
+AccountingStorageHost={{ master.hostname }}
+AccountingStorageUser={{ slurmConf.database_user }}
+
 #JobAcctGatherType=jobacct_gather/linux
 ClusterName=bibigrid
 
