--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
@@ -47,16 +47,16 @@
 - import_tasks: 030-docker.yml
   tags: ["docker","common-docker"]
 
-- block:
-  - debug:
-      msg: "[BIBIGRID] Munge"
-  - include: 040-munge.yml
-  - debug:
-      msg: "[BIBIGRID] SLURM Config"
-  - include: 041-slurm.yml
-  when:
-    - enable_slurm == 'yes'
-  tags: ['slurm',"common-slurm","scale-up","scale-down"]
+#- block:
+#  - debug:
+#      msg: "[BIBIGRID] Munge"
+#  - include: 040-munge.yml
+#  - debug:
+#      msg: "[BIBIGRID] SLURM Config"
+#  - include: 041-slurm.yml
+#  when:
+#    - enable_slurm == 'yes'
+#  tags: ['slurm',"common-slurm","scale-up","scale-down"]
 
 - debug:
     msg: "[BIBIGRID] Measure cluster performance"
