--- a/bibigrid-core/src/main/resources/playbook/roles/slurm/templates/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/slurm/templates/slurm.conf
@@ -22,7 +22,7 @@ PartitionName=debug Nodes={% if use_master_as_compute == 'yes' %}{{master.hostna
 # ACCOUNTING
 AccountingStorageType=accounting_storage/slurmdbd
 AccountingStorageHost={{ master.hostname }}
-AccountingStorageUser={{ slurmConf.database_user }}
+AccountingStorageUser={{ slurmConf.db_user }}
 
 #JobAcctGatherType=jobacct_gather/linux
 ClusterName=bibigrid
