--- a/bibigrid-core/src/main/resources/playbook/roles/slurm/templates/slurmdbd.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/slurm/templates/slurmdbd.conf
@@ -21,9 +21,9 @@ PurgeUsageAfter=1month
 LogFile=/var/log/slurmdbd.log
 PidFile=/var/run/slurmdbd.pid
 SlurmUser=slurm
-StoragePass={{ slurmConf.database_password }}
+StorageLoc={{ slurmConf.db }}
+StoragePass={{ slurmConf.db_password }}
 StorageType=accounting_storage/mysql
-StorageUser={{ slurmConf.database_user }}
+StorageUser={{ slurmConf.db_user }}
 StoragePort=3306
-StorageLoc=slurm_acct_db
 StorageHost=127.0.0.1
