--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
@@ -21,6 +21,11 @@
   tags: ["master-disk","disk"]
 
 - debug:
+    msg: "[BIBIGRID] Configure database"
+- include: 006-database.yml
+  tags: ["database","slurm","master-slurm"]
+
+- debug:
     msg: "[BIBIGRID] Setup NFS"
   when:
     - enable_nfs == 'yes'
@@ -29,23 +34,23 @@
     - enable_nfs == 'yes'
   tags: ["master-nfs","nfs"]
 
-- debug:
-    msg: "[BIBIGRID] Setup GridEngine"
-  when:
-    - enable_gridengine == 'yes'
-- include: 020-gridengine.yml
-  when:
-    - enable_gridengine == 'yes'
-  tags: ["master-gridengine","gridengine"]
-
-- block:
-  - debug:
-      msg: "[BIBIGRID] Setup Slurm master"
-
-  - include: 021-slurm.yml
-  when:
-    - enable_slurm == 'yes'
-  tags: ["master-slurm","slurm","scale-up","scale-down"]
+#- debug:
+#    msg: "[BIBIGRID] Setup GridEngine"
+#  when:
+#    - enable_gridengine == 'yes'
+#- include: 020-gridengine.yml
+#  when:
+#    - enable_gridengine == 'yes'
+#  tags: ["master-gridengine","gridengine"]
+#
+#- block:
+#  - debug:
+#      msg: "[BIBIGRID] Setup Slurm master"
+#
+#  - include: 021-slurm.yml
+#  when:
+#    - enable_slurm == 'yes'
+#  tags: ["master-slurm","slurm","scale-up","scale-down"]
 
 - debug:
     msg: "[BIBIGRID] Setup Theia"
