--- a/bibigrid-core/src/main/resources/playbook/site.yml
+++ b/bibigrid-core/src/main/resources/playbook/site.yml
@@ -1,3 +1,7 @@
+# Attention. This file will be overwritten by BiBiGrid during Cluster creation.
+# -> package de.unibi.cebitec.bibigrid.core.model
+# -> public final class AnsibleConfig
+
 - hosts: master
   become: 'yes'
   vars_files:
@@ -5,8 +9,9 @@
   - vars/instances.yml
   - vars/common_configuration.yml
   roles:
-  - common
-  - master
+  - { role: common, tags: ["common"] }
+  - { role: master, tags: [ "master" ] }
+  - { role: slurm, tags: ['slurm',"scale-up","scale-down"] }
 - hosts: workers
   become: 'yes'
   vars_files:
@@ -15,5 +20,6 @@
   - vars/common_configuration.yml
   - vars/{{ ansible_default_ipv4.address }}.yml
   roles:
-  - common
-  - worker
+  - { role: common, tags: ["common"] }
+  - { role: worker, tags: ["worker"] }
+  - { role: slurm, tags: ['slurm',"scale-up","scale-down"] }
