remove ganglia task from common,master and worker role (#249)

--- a/bibigrid-core/src/main/resources/playbook/roles/slurm/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slurm/tasks/main.yml
@@ -129,4 +129,9 @@
     notify:
       - slurmrestd
 
+  - name: start slurm explicity after all dependencies are configured
+    systemd:
+      name: slurmctld
+      state: started
+
   when: "'master' in group_names"
