Added AccountSettings and PrioritySettings and scheduler config in var/

--- a/bibigrid-core/src/main/resources/playbook/roles/slurm/templates/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/slurm/templates/slurm.conf
@@ -24,6 +24,9 @@ AccountingStorageType=accounting_storage/slurmdbd
 AccountingStorageHost={{ master.hostname }}
 AccountingStorageUser={{ slurmConf.db_user }}
 
+AccountingSettings={{ scheduler_config.accounting_settings }}
+PrioritySettings={{ scheduler_config.priority_settings }}
+
 #JobAcctGatherType=jobacct_gather/linux
 ClusterName=bibigrid
 
