Transferred AccountingSettings and PrioritySettings directly into slurm.conf

--- a/bibigrid-core/src/main/resources/playbook/roles/slurm/templates/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/slurm/templates/slurm.conf
@@ -21,11 +21,16 @@ PartitionName=debug Nodes={% if use_master_as_compute == 'yes' %}{{master.hostna
 
 # ACCOUNTING
 AccountingStorageType=accounting_storage/slurmdbd
+AccountingStoreJobComment=YES
 AccountingStorageHost={{ master.hostname }}
 AccountingStorageUser={{ slurmConf.db_user }}
 
-AccountingSettings={{ scheduler_config.accounting_settings }}
-PrioritySettings={{ scheduler_config.priority_settings }}
+# PRIORITY
+PriorityType=priority/multifactor
+PriorityFavorSmall=NO
+PriorityWeightJobSize=100000
+AccountingStorageTRES=cpu,mem,gres/gpu
+PriorityWeightTRES=cpu=1000,mem=2000,gres/gpu=3000
 
 #JobAcctGatherType=jobacct_gather/linux
 ClusterName=bibigrid
