fix(Ansible): wait till bielefeld_environment service is done if it exists

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
@@ -10,6 +10,16 @@
     group: root
     mode: 0644
 
+- name: Populate service facts
+  ansible.builtin.service_facts:
+
+- name: Wait till Apt_Mirror de.NBI Bielefeld Service is done
+  ansible.builtin.service_facts:
+  until: services['de.NBI_Bielefeld_environment.service'].state == 'stopped'
+  retries: 35
+  delay: 10
+  when: services['de.NBI_Bielefeld_environment.service'] is defined
+
 - name: Update
   apt:
     update_cache: "yes"
