Probably the last release of the Java-Based Version of BiBiGrid

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/002-zabbix.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/002-zabbix.yml
@@ -190,7 +190,7 @@
     host_groups:
       - 'Linux servers'
     link_templates:
-      - 'Template OS Linux by Zabbix Agent' # new in Zabbix 4.4
+      - 'Linux by Zabbix agent'
     interfaces:
       - type: 1 # agent
         main: 1 # default
