Testing if tests are ignored by pylint now

--- a/.pylintrc
+++ b/.pylintrc
@@ -52,6 +52,7 @@ ignore-paths=
 # matches against base names, not paths. The default value ignores Emacs file
 # locks
 ignore-patterns=^\.#
+ignore-patterns=tests/
 
 # List of module names for which member attributes should not be checked
 # (useful for modules/projects where namespaces are manipulated during runtime
