add apt.bi.denbi.de as package source

--- a/resources/playbook/roles/bibigrid/tasks/001-apt.yml
+++ b/resources/playbook/roles/bibigrid/tasks/001-apt.yml
@@ -46,6 +46,15 @@
   tags:
     - skip_ansible_lint
 
+- name: Add apt.bi.denbi.de repository key
+  apt_key:
+    url: 'https://apt.bi.denbi.de/repo_key.key'
+    state: present
+
+- name: Add apt.bi.denbi.de repository
+  apt_repository:
+    repo: 'deb https://apt.bi.denbi.de/repos/apt/{{ ansible_distribution_release | lower }} {{ ansible_distribution_release | lower }} main'
+
 - name: Update apt cache
   apt:
     upgrade: 'yes'
