slurmrestd uses openapi/v0.0.38

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -18,7 +18,7 @@ JobAcctGatherType=jobacct_gather/linux
 
 # see https://slurm.schedmd.com/slurm.conf.html#OPT_cloud_dns:~:text=for%20additional%20details.-,cloud_dns,-By%20default%2C%20Slurm
 # SlurmctldParameters=cloud_dns
-# Funktioniert nicht wie vermutet. slurmctld versucht mit diesem Paramter schon beim Start alle Clients aufzulösen,
+# Funktioniert nicht wie vermutet. slurmctld versucht mit diesem Parameter schon beim Start alle Clients aufzulösen,
 # was natürlich nicht funktioniert.
 
 # PRIORITY
