--- a/resources/playbook/roles/bibigrid/templates/wireguard/wg0.conf
+++ b/resources/playbook/roles/bibigrid/templates/wireguard/wg0.conf
@@ -1,14 +1,19 @@
 # Config Master node Bielefeld
+# Master node ipv4: {{ ansible_default_ipv4.address }}
 
 [Interface]
 Address = 10.0.0.1/24
-PrivateKey = {{ wg_private_key }}
+PrivateKey = {{ wireguard["private_key"] }}
 ListenPort = 51820
 
 # For every vpn but self
-[Peer]
-PublicKey = {{ wg_public_key }
-AllowedIPs = 10.0.0.0/24, {{ wg_subnet }} # for every subnet but self
-Endpoint = {{ wg_vpn_ip }}:51820
+{% for peer in wireguard["peers"] %}
+{% if peer["ip"] is {{ ansible_default_ipv4.address }} %}
+[Peer]  # {{ peer["name"] }}
+PublicKey = {{ wireguard["public_key"] }
+AllowedIPs = 10.0.0.0/24,{{ peer["subnets"] | join(',') }}
+Endpoint = {{ peer["remote_vpn_ip"] }}:51820
+{% endif %}
+{% endfor %}
 
 PersistentKeepalive = 25
