--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -6,8 +6,10 @@ jobs:
     container:
       image: quay.io/cmg/pylint-ansiblelint:2.14.5_6.8.0
     steps:
-      - name: list root
-        run: ls -al /
+      - name: list /__w
+        run: ls -al /__w
+      - name: list /__w/bibigrid
+        run: ls -al /__w/bibigrid
       - name: ansible_lint
         run: ansible-lint resources/playbook/roles/bibigrid/tasks/main.yml
       - name: pylint_lint
