--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -3,13 +3,17 @@ on: [push]
 jobs:
   linting-job:
     runs-on: ubuntu-latest
-    container:
-      image: quay.io/cmg/pylint-ansiblelint:2.14.5_6.8.0
     steps:
-      - name: list /__w
-        run: ls -al /__w
-      - name: list /__w/bibigrid
-        run: ls -al /__w/bibigrid
+      - uses: action/checkout@v3
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
       - name: ansible_lint
         run: ansible-lint resources/playbook/roles/bibigrid/tasks/main.yml
       - name: pylint_lint
