--- a/.pylintrc
+++ b/.pylintrc
@@ -52,7 +52,6 @@ ignore-paths=
 # matches against base names, not paths. The default value ignores Emacs file
 # locks
 ignore-patterns=^\.#
-ignore-patterns=tests/
 
 # List of module names for which member attributes should not be checked
 # (useful for modules/projects where namespaces are manipulated during runtime
@@ -83,7 +82,7 @@ persistent=no
 
 # Minimum Python version to use for version dependent checks. Will default to
 # the version used to run pylint.
-py-version=3.10
+#py-version=3.10
 
 # Discover python modules and packages in the file system subtree.
 recursive=no
