--- a/resources/playbook/roles/bibigrid/tasks/025-nfs-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/025-nfs-server.yml
@@ -18,7 +18,8 @@
     path: /etc/exports
     state: present
     regexp: '^{{ item.src }}'
-    line: '{{ item.src }} {{ cluster_cidrs[0].provider_cidrs[0] }}(rw,nohide,insecure,no_subtree_check,async)'
+
+    line: '{{ item.src }} {{ "10.0.0.1/"+wireguard.mask_bits|string if wireguard is defined else cluster_cidrs[0].provider_cidrs[0]}} (rw,nohide,insecure,no_subtree_check,async)'
   with_items:
     - "{{ nfs_mounts }}"
   notify:
