--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -67,17 +67,18 @@ SlurmdDebug=info
 SlurmdLogFile=/var/log/slurm/slurmd.log
 
 # COMPUTE NODES
+{% set sl = {"list":[master.name|lower if use_master_as_compute]} %}
 {% set mem = master.flavor.ram // 1024 * 1000 %}
 NodeName={{ master.name }} SocketsPerBoard={{ master.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=UNKNOWN
-{% set sl = [] %}
 {% for identifier in workers %}
-{% for type in identifier %}
+# {{ identifier }}
+{% for type in workers[identifier] %}
 {% set mem = type.flavor.ram // 1024 * 1000 %}
-NodeName={{ type.name }} SocketsPerBoard={{ type.flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD {{ sl.append(type.name)}}
+NodeName={{ type.name }} SocketsPerBoard={{ type.flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD {{ sl.list.append(type.name)}}
 {% endfor %}
+PartitionName={{ identifier }} Nodes={{sl.list|join(",")}} default=yes
+{{ sl.update({"list":[]}) }}
 {% endfor %}
-
-PartitionName=bibigrid Nodes={% if use_master_as_compute %}{{master.name | lower}},{%endif%}{{sl|join(",")}} default=yes
 
 
 # POWER  /ELASTIC SCHEDULING
