Larger rework of instances file

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -70,9 +70,8 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 {% set sl = {"list":[master.name|lower if use_master_as_compute]} %}
 {% set mem = master.flavor.ram // 1024 * 1000 %}
 NodeName={{ master.name }} SocketsPerBoard={{ master.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=UNKNOWN
-{% for identifier in workers %}
-# {{ identifier }}
-{% for type in workers[identifier] %}
+{% for cloud_specification in workers %}
+{% for type in workers[cloud_specification] %}
 {% set mem = type.flavor.ram // 1024 * 1000 %}
 NodeName={{ type.name }} SocketsPerBoard={{ type.flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD {{ sl.list.append(type.name)}}
 {% endfor %}
