--- a/resources/playbook/roles/bibigrid/tasks/002-wireguard-vpn.yml
+++ b/resources/playbook/roles/bibigrid/tasks/002-wireguard-vpn.yml
@@ -9,7 +9,7 @@
 
 - name: Setup wg0 device
   template:
-    src: wireguard/device.jinja
+    src: wireguard/device.j2
     dest: /etc/systemd/network/wg0.netdev
     owner: root
     group: systemd-network
@@ -20,7 +20,7 @@
 
 - name: Setup wg0 network
   template:
-    src: wireguard/network.jinja
+    src: wireguard/network.j2
     dest: /etc/systemd/network/wg0.network
     owner: root
     group: systemd-network
