--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
@@ -5,7 +5,7 @@
     fstype: none
     opts: bind,auto
     state: mounted
-  when: master.flavor.ephemeral > 0
+  when: instances.master.flavor.ephemeral > 0
 
 - name: Mount disks
   mount:
@@ -14,5 +14,5 @@
     fstype: ext4
     state: mounted
   with_items:
-    - "{{ master.disks }}"
-  when: master.disks is defined
+    - "{{ instances.master.disks }}"
+  when: instances.master.disks is defined
