--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -1,5 +1,5 @@
 # MANAGEMENT POLICIES
-SlurmctldHost={{ master.name | lower }}
+SlurmctldHost={{ instances.master.name | lower }}
 AuthType=auth/munge
 CryptoType=crypto/munge
 SlurmUser=slurm
@@ -57,7 +57,7 @@ SelectTypeParameters=CR_Core
 # ACCOUNTING
 AccountingStorageType=accounting_storage/slurmdbd
 AccountingStoreFlags=job_comment
-AccountingStorageHost={{ master.name | lower }}
+AccountingStorageHost={{ instances.master.name | lower }}
 AccountingStorageUser={{ slurm_conf.db_user }}
 
 # LOGGING
@@ -91,8 +91,8 @@ ResumeTimeout= {{ slurm_conf.elastic_scheduling.ResumeTimeout }}
 SuspendProgram=/opt/slurm/terminate.sh
 # Suspend time is 10 minutes (600 seconds)
 SuspendTime= {{ slurm_conf.elastic_scheduling.SuspendTime }}
-# Excludes {{ master.name }} from suspend
-SuspendExcNodes={{ master.name }}
+# Excludes {{ instances.master.name }} from suspend
+SuspendExcNodes={{ instances.master.name }}
 # Maximum number of nodes
 TreeWidth= {{ slurm_conf.elastic_scheduling.TreeWidth }}
 # Do not cache dns names
