--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -70,7 +70,7 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 {% set sl = {"list":[instances.master.name|lower if use_master_as_compute]} %}
 {% set mem = instances.master.flavor.ram // 1024 * 1000 %}
 NodeName={{ instances.master.name }} SocketsPerBoard={{ instances.master.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=UNKNOWN
-{% for cloud in instances[:-1] %}
+{% for cloud in (instances.keys()|list)[:-1] %}
 # {{cloud}}
 {% if "vpnwkr" in instances[cloud].keys() %}
 {{ sl.list.append(instances[cloud]["vpnwkr"]) }}
