minor reference fixes regarding master and vpn

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -73,7 +73,7 @@ NodeName={{ instances.master.name }} SocketsPerBoard={{ instances.master.flavor.
 {% for cloud in (instances.keys()|list)[:-1] %}
 # {{cloud}}
 {% if "vpnwkr" in instances[cloud].keys() %}
-{{ sl.list.append(instances[cloud]["vpnwkr"]) }}
+{{ sl.list.append(instances[cloud]["vpnwkr"].name) }}
 {% endif %}
 {% for type in instances[cloud]["workers"] %}
 {% set mem = type.flavor.ram // 1024 * 1000 %}
