--- a/resources/playbook/roles/bibigrid/templates/slurm/slurmdbd.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurmdbd.conf
@@ -8,7 +8,7 @@ ArchiveUsage=no
 #ArchiveScript=/usr/sbin/slurm.dbd.archive
 AuthInfo=/var/run/munge/munge.socket.2
 AuthType=auth/munge
-DbdHost={{ master.name | lower }}
+DbdHost={{ instances.master.name | lower }}
 DebugLevel=debug
 PurgeEventAfter=1month
 PurgeJobAfter=1month
