--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -73,11 +73,13 @@ NodeName={{ instances.master.name }} SocketsPerBoard={{ instances.master.flavor.
 {% for cloud in (instances.keys()|list)[:-1] %}
 # {{cloud}}
 {% if "vpnwkr" in instances[cloud].keys() %}
+NodeName={{ instances[cloud]["vpnkr"].name }} SocketsPerBoard={{ instances[cloud]["vpnkr"].flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
 {{ sl.list.append(instances[cloud]["vpnwkr"].name) }}
 {% endif %}
 {% for type in instances[cloud]["workers"] %}
 {% set mem = type.flavor.ram // 1024 * 1000 %}
-NodeName={{ type.name }} SocketsPerBoard={{ type.flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD {{ sl.list.append(type.name)}}
+NodeName={{ type.name }} SocketsPerBoard={{ type.flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
+{{ sl.list.append(type.name)}}
 {% endfor %}
 PartitionName={{ cloud }} Nodes={{sl.list|join(",")}} default=yes
 {{ sl.update({"list":[]}) }}
