--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -66,6 +66,9 @@ SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmdDebug=info
 SlurmdLogFile=/var/log/slurm/slurmd.log
 
+# DEFAULT
+DefaultPartition=instances.master.cloud_specification
+
 # COMPUTE NODES
 {% set sl = {"list":[instances.master.name|lower if use_master_as_compute]} %}
 {% set mem = instances.master.flavor.ram // 1024 * 1000 %}
@@ -73,7 +76,7 @@ NodeName={{ instances.master.name }} SocketsPerBoard={{ instances.master.flavor.
 {% for cloud in (instances.keys()|list)[:-1] %}
 # {{cloud}}
 {% if "vpnwkr" in instances[cloud].keys() %}
-NodeName={{ instances[cloud]["vpnkr"].name }} SocketsPerBoard={{ instances[cloud]["vpnkr"].flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
+NodeName={{ instances[cloud]["vpnwkr"].name }} SocketsPerBoard={{ instances[cloud]["vpnwkr"].flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
 {{ sl.list.append(instances[cloud]["vpnwkr"].name) }}
 {% endif %}
 {% for type in instances[cloud]["workers"] %}
