default if cloud fits

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -81,7 +81,7 @@ NodeName={{ instances[cloud]["vpnwkr"].name }} SocketsPerBoard={{ instances[clou
 NodeName={{ type.name }} SocketsPerBoard={{ type.flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
 {{ sl.list.append(type.name)}}
 {% endfor %}
-PartitionName={{ cloud }} Nodes={{sl.list|join(",")}} default=yes
+PartitionName={{ cloud }} Nodes={{sl.list|join(",")}} {% if cloud == instances.master.cloud_specification %} default=yes {% endif %}
 {{ sl.update({"list":[]}) }}
 {% endfor %}
 
