--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -70,7 +70,7 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 {% set sl = {"list":[instances.master.name|lower if use_master_as_compute]} %}
 {% set mem = instances.master.flavor.ram // 1024 * 1000 %}
 NodeName={{ instances.master.name }} SocketsPerBoard={{ instances.master.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=UNKNOWN
-{% for cloud in (instances.keys() if cloud != "master" %}
+{% for cloud in instances.keys() if cloud != "master" %}
 # {{cloud}}
 {% if "vpnwkr" in instances[cloud].keys() %}
 NodeName={{ instances[cloud]["vpnwkr"].name }} SocketsPerBoard={{ instances[cloud]["vpnwkr"].flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
