add dnsmasq support ( #372 )

--- a/resources/playbook/roles/bibigrid/handlers/main.yml
+++ b/resources/playbook/roles/bibigrid/handlers/main.yml
@@ -61,3 +61,8 @@
   become: yes
   shell:
     cmd: "bash -c 'wg syncconf wg0 <(wg-quick strip wg0)'"
+
+- name: dnsmasq
+  systemd:
+    name: dnsmasq
+    state: restarted
