--- a/resources/playbook/roles/bibigrid/tasks/main.yml
+++ b/resources/playbook/roles/bibigrid/tasks/main.yml
@@ -46,13 +46,13 @@
         msg: "[BIBIGRID] Configure Wireguard for VPNs"
     - import_tasks: 002-wireguard-vpn.yml
 
-- name: Add all hosts (IP/AC_NAME) to /etc/hosts for local DNS lockup.
-  when: local_dns_lookup|default(false)|bool
-  tags: ['hosts']
+- name: Setup DNS
+  when: "'master' in group_names"
+  tags: ["dns"]
   block:
     - debug:
-        msg: "[BIBIGRID] Add all hosts (IP/AC_NAME) to /etc/hosts for local DNS lockup."
-    - import_tasks: 004-hosts.yml
+        msg: "[BIBIGRID] Setup DNS"
+    - import_tasks: 003-dns.yml
 
 - name: Configure database
   when: "'master' in group_names"
