patch for wait for post-launch services to stop

--- a/resources/playbook/roles/bibigrid/tasks/001-apt.yml
+++ b/resources/playbook/roles/bibigrid/tasks/001-apt.yml
@@ -18,7 +18,9 @@
   delay: 30
   with_items:
     - "{{ wait_for_services }}"
-  when: wait_for_services is defined
+  when:
+    - wait_for_services is defined
+    - "{{ item }}" in result.ansible_facts.services
 
 - name: Update
   apt:
