extend dnsmasq support ( #372 )

--- a/resources/playbook/roles/bibigrid/tasks/001-apt.yml
+++ b/resources/playbook/roles/bibigrid/tasks/001-apt.yml
@@ -19,6 +19,7 @@
   with_items:
     - "{{ wait_for_services }}"
   when: wait_for_services is defined
+  ignore_errors: true
 
 - name: Update
   apt:
