--- a/resources/playbook/roles/bibigrid/tasks/003-dns.yml
+++ b/resources/playbook/roles/bibigrid/tasks/003-dns.yml
@@ -1,16 +1,3 @@
-# ToDo: The following task only works in an openstack environment and if dns is provided by the Openstack setup
-# It should be run before systemd-resolved is stopped, because it needs a running dns.
-# ToDo: --os-cloud should be templated
-- name: get available dns server (openstack only)
-  shell:
-    cmd: openstack --os-cloud bielefeld port list --long | grep network:dhcp | sed "s/^.*ip_address='\(.*\)',.*$/\1/"
-  register: dnsserverlist
-  changed_when: false
-
-#- name: print dns server list (for debug purpose)
-#  debug:
-#    msg: "{{ dnsserverlist.stdout_lines }}"
-
 - name: Disable and Stop systemd-resolve
   systemd:
     name: systemd-resolved
@@ -26,6 +13,12 @@
   apt:
     name: dnsmasq
     state: present
+
+- name: Create /etc/hosts
+  template:
+    src: dns/host.conf.j2
+    dest: /etc/host.conf
+  notify: dnsmasq
 
 - name: Touch /etc/dnsmasq.hosts
   file:
@@ -47,4 +40,8 @@
     src: dns/dnsmasq.conf.j2
     dest: /etc/dnsmasq.conf
   notify: dnsmasq
+
+- name: Flush handlers
+  meta: flush_handlers
+
 
