bugfixes dnsmasq support ( #372 )

--- a/resources/playbook/roles/bibigrid/tasks/003-dns.yml
+++ b/resources/playbook/roles/bibigrid/tasks/003-dns.yml
@@ -16,18 +16,9 @@
 
 - name: Create /etc/hosts
   template:
-    src: dns/host.conf.j2
-    dest: /etc/host.conf
+    src: dns/hosts.j2
+    dest: /etc/dnsmasq.hosts
   notify: dnsmasq
-
-- name: Touch /etc/dnsmasq.hosts
-  file:
-    path: /etc/dnsmasq.hosts
-    owner: root
-    group: root
-    mode: '0644'
-    state: touch
-  changed_when: false
 
 - name: Adjust dnsmasq.resolv.conf
   template:
