fix ansible syntax add all vpnworker to dnsmasq.hosts ( #372 ) change order of copying clouds.yaml many changes

--- a/resources/playbook/roles/bibigrid/tasks/001-apt.yml
+++ b/resources/playbook/roles/bibigrid/tasks/001-apt.yml
@@ -13,14 +13,13 @@
 - name: Wait for post-launch services to stop
   service_facts:
   register: result
-  until: result.ansible_facts.services['{{ item }}'].state == 'stopped'
+  until: "'{{ item }}' not in result.ansible_facts.services or result.ansible_facts.services['{{ item }}'].state == 'stopped'"
   retries: 12
   delay: 30
   with_items:
     - "{{ wait_for_services }}"
   when:
     - wait_for_services is defined
-    - "{{ item }}" in result.ansible_facts.services
 
 - name: Update
   apt:
